fix wraping network

--- a/css/style.scss
+++ b/css/style.scss
@@ -811,13 +811,15 @@ main {
     h2 {
       margin: 0;
       width: 100%;
-      font-size: 4rem;
       text-align: center;
     }
   }
   #network {
     ul {
       text-align: center;
+    }
+    li span {
+      display: block;
     }
   }
   #client_protocol {
@@ -912,6 +914,9 @@ main {
 }
 
 @media screen and (max-width: 450px) {
+  h2 {
+    font-size: 2.5rem;
+  }
   nav {
     ul li a {
       font-size: 1.2rem;
